@@ -10,8 +10,8 @@ use Padre::Wx ();
 use Padre::Util   ('_T');
 
 sub padre_interfaces {
-	'Padre::Plugin'   => 0.26,
-	'Padre::Document' => 0.21,
+	'Padre::Plugin'   => 0.43,
+	'Padre::Document' => 0.43,
 }
 
 sub registered_documents {
